// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FavoritesButton /> should only render when no favorites set 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [MockFunction],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(FavoritesButtonWithStyles)
    active={false}
  >
    <FavoritesButtonWithStyles
      active={false}
      addFavorites={[Function]}
      aria-hidden={null}
      className=""
      loadWishlistOnAppStartEnabled={true}
      noShadow={false}
      onRippleComplete={[Function]}
      once={false}
      productId={null}
      removeFavorites={[Function]}
      removeThrottle={0}
      removeWithRelatives={false}
      rippleClassName=""
      wishlistItemQuantityEnabled={false}
    >
      <FavoritesButton
        active={false}
        addFavorites={[Function]}
        aria-hidden={null}
        className=""
        classes={
          {
            "button": "tss-1u31vv7-FavoritesButton-button",
            "buttonFlat": "tss-4h8gtq-FavoritesButton-buttonFlat",
            "ripple": "tss-15zbdnm-FavoritesButton-ripple",
          }
        }
        loadWishlistOnAppStartEnabled={true}
        noShadow={false}
        onRippleComplete={[Function]}
        once={false}
        productId={null}
        removeFavorites={[Function]}
        removeThrottle={0}
        removeWithRelatives={false}
        rippleClassName=""
        wishlistItemQuantityEnabled={false}
      >
        <button
          aria-hidden={null}
          aria-label="favorites.add"
          className="ui-shared__favorites-button tss-1u31vv7-FavoritesButton-button "
          data-test-id="favoriteButton"
          onClick={[Function]}
          type="button"
        >
          <RippleWithStyles
            className="tss-15zbdnm-FavoritesButton-ripple "
            onComplete={[Function]}
          >
            <Ripple
              className="tss-15zbdnm-FavoritesButton-ripple "
              classes={
                {
                  "container": "tss-1dfkr3n-Ripple-container",
                }
              }
              color="#000"
              disabled={false}
              fill={false}
              onClick={[Function]}
              onComplete={[Function]}
              overflow={false}
              size={null}
            >
              <div
                className="ui-shared__ripple tss-15zbdnm-FavoritesButton-ripple "
                data-test-id="Ripple"
                onClick={[Function]}
                style={null}
              >
                <HeartOutline>
                  <Icon
                    content="<path d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"/>"
                  >
                    <svg
                      className="tss-1n8b10t-root common__icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": "<path d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"/>",
                        }
                      }
                      style={
                        {
                          "fill": undefined,
                          "fontSize": "inherit",
                        }
                      }
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </Icon>
                </HeartOutline>
              </div>
            </Ripple>
          </RippleWithStyles>
        </button>
      </FavoritesButton>
    </FavoritesButtonWithStyles>
  </Connect(FavoritesButtonWithStyles)>
</Provider>
`;

exports[`<FavoritesButton /> should render when favorites set 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [MockFunction],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(FavoritesButtonWithStyles)
    active={true}
  >
    <FavoritesButtonWithStyles
      active={true}
      addFavorites={[Function]}
      aria-hidden={null}
      className=""
      loadWishlistOnAppStartEnabled={true}
      noShadow={false}
      onRippleComplete={[Function]}
      once={false}
      productId={null}
      removeFavorites={[Function]}
      removeThrottle={0}
      removeWithRelatives={false}
      rippleClassName=""
      wishlistItemQuantityEnabled={false}
    >
      <FavoritesButton
        active={true}
        addFavorites={[Function]}
        aria-hidden={null}
        className=""
        classes={
          {
            "button": "tss-1u31vv7-FavoritesButton-button",
            "buttonFlat": "tss-4h8gtq-FavoritesButton-buttonFlat",
            "ripple": "tss-15zbdnm-FavoritesButton-ripple",
          }
        }
        loadWishlistOnAppStartEnabled={true}
        noShadow={false}
        onRippleComplete={[Function]}
        once={false}
        productId={null}
        removeFavorites={[Function]}
        removeThrottle={0}
        removeWithRelatives={false}
        rippleClassName=""
        wishlistItemQuantityEnabled={false}
      >
        <button
          aria-hidden={null}
          aria-label="favorites.remove"
          className="ui-shared__favorites-button tss-1u31vv7-FavoritesButton-button "
          data-test-id="favoriteButton"
          onClick={[Function]}
          type="button"
        >
          <RippleWithStyles
            className="tss-15zbdnm-FavoritesButton-ripple "
            onComplete={[Function]}
          >
            <Ripple
              className="tss-15zbdnm-FavoritesButton-ripple "
              classes={
                {
                  "container": "tss-1dfkr3n-Ripple-container",
                }
              }
              color="#000"
              disabled={false}
              fill={false}
              onClick={[Function]}
              onComplete={[Function]}
              overflow={false}
              size={null}
            >
              <div
                className="ui-shared__ripple tss-15zbdnm-FavoritesButton-ripple "
                data-test-id="Ripple"
                onClick={[Function]}
                style={null}
              >
                <Heart>
                  <Icon
                    content="<path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>"
                  >
                    <svg
                      className="tss-1n8b10t-root common__icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": "<path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>",
                        }
                      }
                      style={
                        {
                          "fill": undefined,
                          "fontSize": "inherit",
                        }
                      }
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </Icon>
                </Heart>
              </div>
            </Ripple>
          </RippleWithStyles>
        </button>
      </FavoritesButton>
    </FavoritesButtonWithStyles>
  </Connect(FavoritesButtonWithStyles)>
</Provider>
`;
